# clipboard

./: .gitignore  .travis.yml  AUTHORS  COPYING-PLAIN  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  config.h  config.status  configure  configure.ac  e-module-clipboard.edj  e_modules-clipboard.spec  libtool  meson.build  meson_options.txt  module.desktop  module.desktop.in  sonar-project.properties  xclip.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: e-module-clipboard.edc  e_modules-clipboard.spec.in  meson.build  module.desktop.in
po/: LINGUAS  POTFILES  clipboard.pot  es.po  ja.po  meson.build  sk.gmo  sk.po  sl.po
src/: Makefile  Makefile.am  Makefile.in  clip_log.c  common.h  config_defaults.h  e_mod_config.c  e_mod_config.h  e_mod_main.c  e_mod_main.h  history.c  history.h  meson.build  module.la  utility.c  utility.h  x_clipboard.c  x_clipboard.h
src/.deps/: e_mod_main.Plo  sourcedrop.Plo
src/.libs/: module.lai
utils/: local_build.sh
