option('debug',
       type       : 'boolean',
       value      : true,
       description: 'Enable support for debugging/-g (default=false)')
option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')
option('homedir-install',
       type       : 'boolean',
       value      : true,
       description: 'Install module in homedir (default=false)')
option('nls',
	type: 'boolean',
	value: true,
	description: 'Enable localization (default=true)')
